--- a/inspirational_quote.html
+++ b/inspirational_quote.html
@@ -2,6 +2,6 @@
 <html>
 <title>Inspiration Quote</title>
 <body>
-<p>"I never take L's because they might be upside down W's."
+  <p>"I never take L's because they might be upside down W's."</p>
 </body>
-</html
+</html>
