--- a/tourist_attractions.html
+++ b/tourist_attractions.html
@@ -9,9 +9,12 @@
       text-align: center;
     }
 
-    p2 {
+    p {
       font-family: verdana;
       font-size: 14px;
+    }
+    
+    p {
       text-align: center;
     }
 
@@ -29,6 +32,8 @@
 <title>Tourist Attractions in Toronto</title>
 
 <body>
+  <p>These are my top 5 tourist attractions in Toronto</p>
+
   <ul>
     <li>Roger's Arena</li>
     <li>CN Tower</li>
@@ -37,6 +42,5 @@
     <li>Ripley's Aquarium of Canada</li>
   </ul>
   <hr>
-<p2>These are my top 5 tourist attractions in Toronto</p2>
 
 </body>
