--- a/ec_website.html
+++ b/ec_website.html
@@ -63,7 +63,7 @@
       </div>
       <div class="column content">
       </div>
-      <div>
+      <div><br>
 <img src="https://www.surreyschools.ca/schools/envercreek/Style%20Library/Images/114.jpg">
       </div>
 <h1>Welcome</h1>
