--- a/ec_website.html
+++ b/ec_website.html
@@ -61,9 +61,7 @@
           <li><a href="https://mrbrown85.github.io/departments.html">Departments</a></li>
         </ul>
       </div>
-      <div class="column content">
-      </div>
-      <br>
+      <div class="column content"
 <img src="https://www.surreyschools.ca/schools/envercreek/Style%20Library/Images/114.jpg">
  
 <h1>Welcome</h1>
