--- a/ec_website.html
+++ b/ec_website.html
@@ -63,7 +63,7 @@
       </div>
       <div class="column content"
 <img src="https://www.surreyschools.ca/schools/envercreek/Style%20Library/Images/114.jpg">
- 
+    </div>
 <h1>Welcome</h1>
 
 <p>Enver Creek Secondary is located in the heart of Surrey, British Columbia.</p>
