--- a/sports_report.html
+++ b/sports_report.html
@@ -94,7 +94,7 @@
 
 
 
-          <li><a href="https://mrbrown85.github.io/departments.html">Tiger's Article</a></li>
+          <li><a href="http://www.golfchannel.com/article/ryan-lavner/woods-nothing-weve-seen-several-years/">Tiger's Article</a></li>
           <br>
         </ul>
       </div>
