--- a/electronic_portfolio.html
+++ b/electronic_portfolio.html
@@ -95,9 +95,9 @@
        <div class="column menu">
          <ul>
           <br>
-          <li><a href="https://mrbrown85.github.io/main.html">Main page</a></li>
-          <li><a href="https://mrbrown85.github.io/clubs.html">Clubs and Teams</a></li>
-          <li><a href="https://mrbrown85.github.io/departments.html">Departments</a></li>
+          <li><a href="https://mrbrown85.github.io/main.html">Contact Information</a></li>
+          <li><a href="https://mrbrown85.github.io/clubs.html">Academic History</a></li>
+          <li><a href="https://mrbrown85.github.io/departments.html">Work & Volunteer Experience</a></li>
          </ul>
        </div>      
     
