--- a/contact_information.html
+++ b/contact_information.html
@@ -1,1 +1,51 @@
+<!DOCTYPE html>
+<html>
 
+<style>
+
+h1 {
+  font-family: Rockwell;
+  text-align: center;
+}
+
+h2 {
+font-family: Rockwell;
+text-align: center;
+}
+
+p {
+  text-align: center;
+  font-family: book antiqua;
+}
+
+</style>
+
+
+
+
+
+
+
+<head>
+<title>Contact Information</title>
+</head>
+ 
+ <body>
+ <h1>Contact Information</h1>
+ <hr>
+  <h2>Email Address</h2>
+<p>theoneandonlygoat@gmail.com</p>
+<hr>
+<h2>Phone Number</h2>
+<p>6o4-567-0392</p>
+<hr>
+</body>
+
+
+
+
+
+
+
+
+</html>
