--- a/electronic_portfolio.html
+++ b/electronic_portfolio.html
@@ -97,7 +97,7 @@
           <br>
           <li><a href="https://yusernaem.github.io/contact_information.html">Contact Information</a></li>
           <li><a href="https://mrbrown85.github.io/clubs.html">Academic History</a></li>
-          <li><a href="https://mrbrown85.github.io/departments.html">Work & Volunteer Experience</a></li>
+          <li><a href="https://yusernaem.github.io/volunteer_experience.html">Work & Volunteer Experience</a></li>
          </ul>
        </div>      
     
