--- a/academic_history.html
+++ b/academic_history.html
@@ -6,7 +6,7 @@
           .menu li {
         padding: 4px;
         margin-bottom: 4px;
-        background-color: white;
+        background-color: black;
         color: #ffffff;
         text-align: center;
       }
