--- a/electronic_portfolio.html
+++ b/electronic_portfolio.html
@@ -96,7 +96,7 @@
          <ul>
           <br>
           <li><a href="https://yusernaem.github.io/contact_information.html">Contact Information</a></li>
-          <li><a href="https://mrbrown85.github.io/clubs.html">Academic History</a></li>
+          <li><a href="https://yusernaem.github.io/academic_history.html">Academic History</a></li>
           <li><a href="https://yusernaem.github.io/volunteer_experience.html">Work & Volunteer Experience</a></li>
          </ul>
        </div>      
