--- a/contact_information.html
+++ b/contact_information.html
@@ -3,6 +3,16 @@
 
 <style>
 
+         .menu li {
+        padding: 4px;
+        margin-bottom: 4px;
+        background-color: black;
+        color: #ffffff;
+        text-align: center;
+      }
+      
+  
+  
 h1 {
   font-family: Rockwell;
   text-align: center;
@@ -31,6 +41,14 @@ p {
 </head>
  
  <body>
+   
+       <div class="column menu">
+      <ul>
+        <br>
+        <li><a href="https://yusernaem.github.io/electronic_portfolio.html">Back to Portfolio</a></li>
+      </ul>
+    </div>
+   
  <h1>Contact Information</h1>
  <hr>
   <h2>Email Address</h2>
