--- a/electronic_portfolio.html
+++ b/electronic_portfolio.html
@@ -98,7 +98,7 @@
           <li><a href="https://yusernaem.github.io/contact_information.html">Contact Information</a></li>
           <li><a href="https://yusernaem.github.io/academic_history.html">Academic History</a></li>
           <li><a href="https://yusernaem.github.io/volunteer_experience.html">Work & Volunteer Experience</a></li>
-          <li><a href="https://yusernaem.github.io/academic_accomplishments.html"Academic Accomplishments</a></li>       
+          <li><a href="https://yusernaem.github.io/academic_accomplishments.html">Academic Accomplishments</a></li>       
         </ul>
        </div>      
     
