--- a/computer_history.html
+++ b/computer_history.html
@@ -2,7 +2,7 @@
 <html>
 
  <head>
-<title>Computer history from 2000s-2018</title>
+<title>Computer history from 1970s-1980's</title>
 <style>
     * {
       box-sizing: border-box;
